--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -12,12 +12,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
-    <!-- Cache Version: dz-admin-v15 (2026-01-22) -->
+    <!-- Cache Version: dz-admin-v16 (2026-01-30) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"
         onerror="console.warn('Cloudinary widget failed to load')"></script>
     <!-- 환경 설정 파일 로드 (비밀번호 등) -->
-    <script src="admin_config.js?v=20260123_1643"></script>
+    <script src="admin_config.js?v=20260130"></script>
 
     <script>
         (function () {
