--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -4278,13 +4278,15 @@
                             <!-- 2. 상태/일정 카드 -->
                             <div class="dashboard-card card-status">
                                 <h3>🚀 진행 현황</h3>
-                                <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
+                                <div
+                                    style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
                                     <span id="dashStatusBadge" class="status-badge"
                                         style="font-size:14px; padding:6px 12px; background:#f5f5f7; color:#86868b;">상담중</span>
                                     <span id="dashDDay" class="d-day-badge" style="display:none;">D-Day</span>
                                 </div>
                                 <!-- 기간 정보 그리드 -->
-                                <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:20px; font-size:13px;">
+                                <div
+                                    style="display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-bottom:20px; font-size:13px;">
                                     <div style="background:#f5f5f7; padding:10px 12px; border-radius:8px;">
                                         <div style="color:#86868b; font-size:11px; margin-bottom:4px;">공사 기간</div>
                                         <div style="color:#1d1d1f; font-weight:600;" id="dashPeriod">- ~ -</div>
@@ -4294,7 +4296,8 @@
                                         <div style="color:#1d1d1f; font-weight:600;" id="dashMovingDate">-</div>
                                     </div>
                                     <div style="background:#e8f5e9; padding:10px 12px; border-radius:8px;">
-                                        <div style="color:#2e7d32; font-size:11px; margin-bottom:4px;">A/S 기간 (잔금일+12개월)</div>
+                                        <div style="color:#2e7d32; font-size:11px; margin-bottom:4px;">A/S 기간 (잔금일+12개월)
+                                        </div>
                                         <div style="color:#1d1d1f; font-weight:600;" id="dashASPeriod">-</div>
                                     </div>
                                     <div style="background:#e3f2fd; padding:10px 12px; border-radius:8px;">
@@ -10572,8 +10575,16 @@
                     if (c.status === 'as_done' && c.asEndDate) {
                         statusText = `A/S ~${c.asEndDate}`;
                     }
-                    const displayName = c.projectName || '현장명 미지정';
-                    const subInfo = (c.name || '') + (c.name && c.phone ? ' / ' : '') + (c.phone || '');
+                    // [MOD] Format: Name | Spouse | Project
+                    let displayParts = [];
+                    if (c.clientName || c.name) displayParts.push(c.clientName || c.name);
+                    if (c.spouseName) displayParts.push(c.spouseName);
+                    displayParts.push(c.projectName || '현장명 미지정');
+                    const displayName = displayParts.join(' | ');
+
+                    // Sub info: Phone numbers
+                    let subInfo = c.phone || '';
+                    if (c.spousePhone) subInfo += (subInfo ? ' / ' : '') + c.spousePhone;
                     const lockIcon = c.isLocked ? '🔒' : '';
                     const creatorInfo = c.createdBy ? ` / <span style="color:#ff9500; font-weight:600;">${c.createdBy}</span>` : '';
                     // [수정] 날짜(updatedAt) 제거 - 고객목록에서 날짜 표시 안함
