--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -10584,7 +10584,7 @@
 
                     // Sub info: Phone numbers
                     let subInfo = c.phone || '';
-                    if (c.spousePhone) subInfo += (subInfo ? ' / ' : '') + c.spousePhone;
+                    if (c.spousePhone) subInfo += (subInfo ? ' | ' : '') + c.spousePhone;
                     const lockIcon = c.isLocked ? '🔒' : '';
                     const creatorInfo = c.createdBy ? ` / <span style="color:#ff9500; font-weight:600;">${c.createdBy}</span>` : '';
                     // [수정] 날짜(updatedAt) 제거 - 고객목록에서 날짜 표시 안함
