Fix CSS: Ensure address text wraps correctly without clipping

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -1192,6 +1192,11 @@
         .customer-item-info {
             font-size: 10px;
             color: #86868b;
+            line-height: 1.35;
+            word-break: keep-all;
+            /* 한글 단어 단위 줄바꿈 */
+            overflow-wrap: anywhere;
+            /* 긴 주소 강제 줄바꿈 */
         }
 
         .customer-item-creator {
